Svelte 5 UI (#20)
